--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background: #FFC0CB; /* pink muda */
+  background: #00ccff; /* pink muda */
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -75,7 +75,7 @@ button {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background: rgba(255,255,255,0.5);
+  background: rgb(249, 255, 249);
   border: none;
   padding: 10px 20px;
   cursor: pointer;
@@ -84,9 +84,9 @@ button {
 }
 
 #prev {
-  left: -70px;
+  left: -110px;
 }
 
 #next {
-  right: -70px;
+  right: -110px;
 }
